--- a/scss/components/_feed.scss
+++ b/scss/components/_feed.scss
@@ -90,7 +90,7 @@ $feed-spacing: 20px !default;
             position: absolute;
             top: 0;
             right: 0;
-            z-index: 20;
+            z-index: 2;
             display: flex;
             flex-direction: column;
             align-items: start;
